--- a/bin/package.yaml
+++ b/bin/package.yaml
@@ -2,6 +2,9 @@ dependencies:
   cli:
     url: github.com/toitlang/pkg-cli
     version: ^1.2.0
+  dartino_regexp:
+    url: github.com/erikcorry/toit-dartino-regexp
+    version: ^0.2.0
   host:
     url: github.com/toitlang/pkg-host
     version: ^1.9.0
