Replace nth match on line

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,7 +26,7 @@ message("Skipped tests: ${SKIP_TESTS}")
 
 function(add_gold_tests TESTS TOIT_NAME UNIX_NAME)
   foreach(file ${${TESTS}})
-    set(test_name "/tests/${file}")
+    set(test_name "${file}")
     if("${test_name}" IN_LIST SKIP_TESTS)
       continue()
     endif()
@@ -48,7 +48,7 @@ endfunction()
 
 function(add_unix_tests TESTS TOIT_NAME UNIX_NAME)
   foreach(file ${${TESTS}})
-    set(test_name "/tests/${file}")
+    set(test_name "${file}")
     if("${test_name}" IN_LIST SKIP_TESTS)
       continue()
     endif()
